# build-system

./: .gitignore  .svnignore  Makefile  README  README.md  _kxLab.pm  apply_patches  build-config.mk.template  build_devices_table  build_ext4fs  build_packages_list  build_pkg_requires  build_requires  build_requires_tree  build_src_requires  canonical-build  configure-targets  constants.mk  core.mk  dist_clean  download-toolchain  downloads_clean  global_clean  install_pkgs  install_targets  rootfs_clean  target-setup.mk  transmitting_hash  tree-bs.mk  tree-build-system.mk  tree-src.mk  tree.mk  update_pkgs  upgrade_pkgs
3pp/app/dialog/1.3-20190808/: Makefile  PATCHES
3pp/app/genext2fs/1.4.1/: Makefile  PATCHES
3pp/app/jsmin/0.0.1/: Makefile
3pp/app/perl/5.30.0/: Makefile  PATCHES
3pp/app/perl/5.30.2/: Makefile  PATCHES
3pp/app/pkgtools/0.1.2/: Makefile
3pp/app/pkgtools/0.1.3/: Makefile
3pp/app/pkgtools/0.1.5/: Makefile
3pp/app/populatefs/1.1/: Makefile  PATCHES
3pp/app/pseudo/1.8.2/: Makefile
3pp/app/pseudo/1.8.2/scripts/: pseudo.pl
3pp/app/python2-modules/pip/19.3.1/: Makefile
3pp/app/python2-modules/pip/20.1/: Makefile
3pp/app/python2-modules/setuptools/41.6.0/: Makefile
3pp/app/python2-modules/setuptools/46.1.3/: Makefile
3pp/app/python2/2.7.15/: Makefile
3pp/app/python2/2.7.16/: Makefile
3pp/app/python2/2.7.18/: Makefile
3pp/app/python3/3.7.2/: Makefile
3pp/app/python3/3.7.4/: Makefile
3pp/app/python3/3.8.2/: Makefile
3pp/app/sqlite/3.26.0.0/: Makefile
3pp/app/sqlite/3.31.1.0/: Makefile
3pp/dialog/1.2-20140112/: Makefile  PATCHES
3pp/dialog/1.3-20170509/: Makefile  PATCHES
3pp/dialog/1.3-20181107/: Makefile  PATCHES
3pp/fakeroot-ng/0.18/: Makefile
3pp/fakeroot/0.18/: Makefile
3pp/fakeroot/1.20.2/: Makefile  PATCHES
3pp/fakeroot/1.20.2/scripts/: fakeroot
3pp/genext2fs/1.4.1/: Makefile  PATCHES
3pp/jsmin/0.0.1/: Makefile
3pp/populatefs/1.0/: Makefile  PATCHES
3pp/populatefs/1.1/: Makefile  PATCHES
3pp/pseudo/1.7.4/: Makefile
3pp/pseudo/1.7.4/scripts/: pseudo  pseudolog
3pp/pseudo/1.8.1/: Makefile
3pp/pseudo/1.8.1/scripts/: pseudo.pl  pseudo.sh  pseudolog
3pp/pseudo/1.8.2/: Makefile
3pp/pseudo/1.9.0/: Makefile
3pp/python2/2.7.11/: Makefile
3pp/python2/2.7.13/: Makefile
3pp/python2/2.7.14/: Makefile
3pp/python2/2.7.15/: Makefile
3pp/python3/3.5.1/: Makefile
3pp/python3/3.5.1/scripts/: python3
3pp/python3/3.6.2/: Makefile
3pp/python3/3.6.4/: Makefile
3pp/python3/3.7.2/: Makefile
3pp/sources/: Makefile
3pp/sqlite/3.10.2.0/: Makefile
3pp/sqlite/3.12.2.0/: Makefile
3pp/sqlite/3.20.0.0/: Makefile
3pp/sqlite/3.26.0.0/: Makefile
doc/: LICENSE-1.0-en_US.txt  LICENSE-1.0-ru_RU.txt  PRINCIPLE.iso88591  PRINCIPLE.md  PRINCIPLE.utf8
doc/html/: build-system.html
doc/html/_data/: bind-requires-tree.json
doc/html/_pixmaps/favicon/: browserconfig.xml  faviconit-instructions.txt
html/: requires_tree_html.template
html/scripts/: README
pkgtool/: .config  change-refs  check-db-integrity.in  check-package.in  check-requires.in  dialogrc  install-package.in  install-pkglist  make-package  make-package.in  make-pkglist  pkginfo  pkglog  remove-package.in  update-package.in  upgrade-package.in
pkgtool/doc/init/: .DESCRIPTION  .INSTALL  .PKGINFO  .REQUIRES
progs/: .config.in  Makefile  acsite.m4  configure.in
scripts/: .config  fill_align  fill_to_size
